# emc

./: CMakeLists.txt
include/: graph.h  raygui.h  widgets.h
src/: graph.c  main.c
